--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -61,7 +61,7 @@
                 <div class="col-lg-3">
                     <div class="logo">
                         <a href="./index.html">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/logo.jpg" alt="">
                         </a>
                     </div>
                 </div>
