Modifique toda la parte de Planes

--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -42,7 +42,7 @@
         <nav class="canvas-menu mobile-menu">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./services.html">Planes</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -69,7 +69,7 @@
                     <nav class="nav-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Inicio</a></li>
-                            <li><a href="./services.html">Servicios</a></li>
+                            <li><a href="./services.html">Planes</a></li>
                             <li><a href="./contact.html">Contacto y Sedes</a></li>
                         </ul>
                     </nav>
