--- a/gymlife-master/services.html
+++ b/gymlife-master/services.html
@@ -44,7 +44,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./class-details.html">Classes</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./services.html">Planes</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
@@ -87,7 +87,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about-us.html">About Us</a></li>
                             <li><a href="./classes.html">Classes</a></li>
-                            <li class="active"><a href="./services.html">Services</a></li>
+                            <li class="active"><a href="./services.html">Planes</a></li>
                             <li><a href="./team.html">Our Team</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -131,10 +131,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Services</h2>
+                        <h2>Planes</h2>
                         <div class="bt-option">
-                            <a href="./index.html">Home</a>
-                            <span>Services</span>
+                            <a href="./index.html">Inicio</a>
+                            <span>Planes</span>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>What we do?</span>
-                        <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <span>Que hacemos?</span>
+                        <h2>FORTALECE TU CUERPO Y MENTE CON NUESTROS PLANES</h2>
                     </div>
                 </div>
             </div>
@@ -162,10 +162,9 @@
                 </div>
                 <div class="col-lg-3 order-lg-2 col-md-6 p-0">
                     <div class="ss-text">
-                        <h4>Personal training</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut dolore
-                            facilisis.</p>
-                        <a href="#">Explore</a>
+                        <h4>Entrenamiento Personal</h4>
+                        <p>Consigue resultados de una vez por todas: perder grasa, ganar masa muscular, ponerse en forma.</p>
+                        <!--<a href="#">Explore</a>-->
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-3 col-md-6 p-0">
@@ -175,9 +174,13 @@
                 </div>
                 <div class="col-lg-3 order-lg-4 col-md-6 p-0">
                     <div class="ss-text">
-                        <h4>Group fitness classes</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus.</p>
-                        <a href="#">Explore</a>
+                        <h4>Clases Fitnes en Grupo</h4>
+                        <p>Las clases en grupo  incluyen actividades y diferentes métodos de ejercicio que permiten alcanzar distintos objetivos.                      
+                            <!--Siempre habrá un curso que se adapte a tus necesidades. Además, en Wonder Gym, ¡hay clases en grupo durante todo el día! Puedes entrenar a cualquier hora. 
+                            Además de las clases dirigidas por un entrenador, Wonder Gym ofrece a todos los socios clases en grupo "autónomas" en una pantalla gigante. 
+                            Nuestros clubes están equipados con salas de retroproyección de tus clases favoritas en un ambiente único que te animarán a superarte. 
+                            Diviértete más y obtén mejores resultados>--></p>
+                        <!--<a href="#">Explore</a>-->
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-8 col-md-6 p-0">
@@ -188,9 +191,9 @@
                 <div class="col-lg-3 order-lg-7 col-md-6 p-0">
                     <div class="ss-text second-row">
                         <h4>Body building</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut dolore
-                            facilisis.</p>
-                        <a href="#">Explore</a>
+                        <p>consistente en la realización de un programa de entrenamiento con pesas con la intención de desarrollar y controlar la musculatura
+                            .</p>
+                        <!--<a href="#">Explore</a>-->
                     </div>
                 </div>
                 <div class="col-lg-3 order-lg-6 col-md-6 p-0">
@@ -201,8 +204,9 @@
                 <div class="col-lg-3 order-lg-5 col-md-6 p-0">
                     <div class="ss-text second-row">
                         <h4>Strength training</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus.</p>
-                        <a href="#">Explore</a>
+                        <p>Los principios son: continuidad, variedad, recuperación y alimentación equilibrada. 
+                            Los ejercicios principales son: sentadillas, peso muerto, press de banca.</p>
+                        <!--<a href="#">Explore</a>-->
                     </div>
                 </div>
             </div>
@@ -211,7 +215,7 @@
     <!-- Services Section End -->
 
     <!-- Banner Section Begin -->
-    <section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
+    <!--<section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -224,7 +228,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- Banner Section End -->
 
     <!-- Pricing Section Begin -->
@@ -233,69 +237,92 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Plan</span>
-                        <h2>Choose your pricing plan</h2>
+                        <span>Nuestros Planes</span>
+                        <h2>ESCOGE TU PLAN DE PRECIOS</h2>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>Class drop-in</h3>
+                        <h3>Plan 3 Meses</h3>
                         <div class="pi-price">
-                            <h2>$ 39.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$100.000</h2>
+                            <span>Prepagado</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
+                            <li>Sauna</li>
+                            <li>Dieta</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Entrenamiento Personalizado</li>
+
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>12 Month unlimited</h3>
+                        <h3>Plan 6 Meses</h3>
                         <div class="pi-price">
-                            <h2>$ 99.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$190.000</h2>
+                            <span>+ 1 Mes Gratis</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
+                            <li>Sauna</li>
+                            <li>Dieta</li>
+                            <li>Pilates</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Bebidas y Suplementos</li>
+                            <li>Entrenamiento Personalizado</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>6 Month unlimited</h3>
+                        <h3>Plan Anual</h3>
                         <div class="pi-price">
-                            <h2>$ 59.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$400.000</h2>
+                            <span>1 Mes Gratis</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
+                            <li>Sauna</li>
+                            <li>Spa</li>
+                            <li>Dieta</li>
+                            <li>Aerobicos</li>
+                            <li>Pilates</li>
+                            <li>Crossfit</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Bebidas y Suplementos</li>
+                            <li>Entrenamiento Personalizado</li>
                             <li>Month to mouth</li>
                             <li>No time restriction</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-8">
+                    <div class="ps-item">
+                        <h3>Plan Visitante 1 Mes</h3>
+                        <div class="pi-price">
+                            <h2>$ 39.000</h2>
+                            <span>Libre de Tarjeta</span>
+                        </div>
+                        <ul>
+                            <li>Dieta</li>
+                            <li>Nutrición</li>
+                            <li>Entrenamiento Personalizado</li>
+                            <li>Limite tiempo 2 Hrs</li>
+                        </ul>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
+                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                    </div>
             </div>
         </div>
     </section>
