--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -44,7 +44,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./class-details.html">Classes</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./services.html">Planes</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
