--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -41,9 +41,9 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./services.html">Planes</a></li>
+                <li><a href="./contact.html">Contacto y Sedes</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -69,7 +69,7 @@
                     <nav class="nav-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Inicio</a></li>
-                            <li><a href="./services.html">Servicios</a></li>
+                            <li><a href="./services.html">Planes</a></li>
                             <li><a href="./contact.html">Contacto y Sedes</a></li>
                         </ul>
                     </nav>
@@ -101,9 +101,9 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
-                                <a href="#" class="primary-btn">Get info</a>
+                                <span>Forma tu mente y tu cuerpo</span>
+                                <h1>Se <strong> Fuerte </strong> Entrenando tu mente</h1>
+                                <a href="#" class="primary-btn">Registrese!</a>
                             </div>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
+                                <span>Forma tu mente y tu cuerpo</span>
+                                <h1>Se <strong> Fuerte </strong> Entrenando Duro tu cuerpo</h1>
                                 <a href="#" class="primary-btn">Registrese!</a>
                             </div>
                         </div>
@@ -132,8 +132,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Why chose us?</span>
-                        <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <span>¿POR QUÉ ELEGIRNOS?</span>
+                        <h2>PRECIONA TUS LIMITES AL MAXIMO</h2>
                     </div>
                 </div>
             </div>
@@ -141,33 +141,33 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-034-stationary-bike"></span>
-                        <h4>Equipamento Moderno</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <h4>Equipamiento Moderno</h4>
+                        <p>Contamos con los mas modernos equipos para que tu lleves tu cuerpo 
+                            al siguiente nivel.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-033-juice"></span>
-                        <h4>Healthy nutrition plan</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Plan Nutricional</h4>
+                        <p>tenemos un equipo dispuesto para realizar el mejor plan nutricional que complemente 
+                            tu esfuerzo.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-002-dumbell"></span>
-                        <h4>Proffesponal training plan</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <h4>Plan de Competicion</h4>
+                        <p>Preparate con los mejores para competir a nivel profecional nacional o
+                            internacional.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-014-heart-beat"></span>
-                        <h4>Unique to your needs</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Seguimiento Medico</h4>
+                        <p>Contamos con alianzas medicas para llevar controles detallados de tu progreso
+                            y salud.</p>
                     </div>
                 </div>
             </div>
@@ -181,8 +181,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Classes</span>
-                        <h2>WHAT WE CAN OFFER</h2>
+                        <span>Nuestras Clases</span>
+                        <h2>TE OFRECEMOS </h2>
                     </div>
                 </div>
             </div>
@@ -193,8 +193,8 @@
                             <img src="img/classes/class-1.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Weightlifting</h5>
+                            <span>GIMNASIA</span>
+                            <h5>AeroRumba</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -205,8 +205,8 @@
                             <img src="img/classes/class-2.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Cardio</span>
-                            <h5>Indoor cycling</h5>
+                            <span>PILATES</span>
+                            <h5>Respira y Ejercita</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -217,8 +217,8 @@
                             <img src="img/classes/class-3.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Kettlebell power</h5>
+                            <span>FUNCIONAL</span>
+                            <h5>Un cuerpo sano, se mueve, funciona y vive.</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -229,8 +229,8 @@
                             <img src="img/classes/class-4.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Cardio</span>
-                            <h4>Indoor cycling</h4>
+                            <span>COMPETICION</span>
+                            <h4>Preparate para competir</h4>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -241,8 +241,8 @@
                             <img src="img/classes/class-5.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Training</span>
-                            <h4>Boxing</h4>
+                            <span>BOXING</span>
+                            <h4></h4>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
