modifique una parte del cuerpo de la pestaña inicio

--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -132,8 +132,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Why chose us?</span>
-                        <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <span>Por que escogernos?</span>
+                        <h2>LLevate al limite!</h2>
                     </div>
                 </div>
             </div>
@@ -142,32 +142,28 @@
                     <div class="cs-item">
                         <span class="flaticon-034-stationary-bike"></span>
                         <h4>Equipamento Moderno</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <p>Acceda a amplias gamas en equipos de calidad profesional, duradera y óptima.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-033-juice"></span>
-                        <h4>Healthy nutrition plan</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Plan Nutricion Saludable</h4>
+                        <p>Te damos una mano para alcanzar metas nutricionales, manteniendo una buena alimentación mediante un seguimiento de un grupo de expertos.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-002-dumbell"></span>
-                        <h4>Proffesponal training plan</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            dolore facilisis.</p>
+                        <h4>Plan Entrenamiento Profesional</h4>
+                        <p>Estamos especializados en Rutinas de Gimnasio y en técnicas de musculación tanto para principiantes que se acaban de apuntar al gimnasio como para los más avanzados.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-014-heart-beat"></span>
-                        <h4>Unique to your needs</h4>
-                        <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-                            facilisis.</p>
+                        <h4>Unico a tus Necesidades</h4>
+                        <p>Contamos con precios accesibles que incluyan todos nuestros servicios, aplicamos todos los protocolos para que puedas entrenar de forma segura.</p>
                     </div>
                 </div>
             </div>
@@ -181,8 +177,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Classes</span>
-                        <h2>WHAT WE CAN OFFER</h2>
+                        <span>Beneficios</span>
+                        <h2>Lo que Podemos Ofrecerte</h2>
                     </div>
                 </div>
             </div>
@@ -193,8 +189,8 @@
                             <img src="img/classes/class-1.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Weightlifting</h5>
+                            <span>FUERZA</span>
+                            <h5>Halterofilia</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -206,7 +202,7 @@
                         </div>
                         <div class="ci-text">
                             <span>Cardio</span>
-                            <h5>Indoor cycling</h5>
+                            <h5>Trotadoras</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -217,8 +213,8 @@
                             <img src="img/classes/class-3.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>STRENGTH</span>
-                            <h5>Kettlebell power</h5>
+                            <span>Nutrición</span>
+                            <h5>Suplementos</h5>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -229,8 +225,8 @@
                             <img src="img/classes/class-4.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Cardio</span>
-                            <h4>Indoor cycling</h4>
+                            <span>Relajacion</span>
+                            <h4>Spa</h4>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -241,8 +237,8 @@
                             <img src="img/classes/class-5.jpg" alt="">
                         </div>
                         <div class="ci-text">
-                            <span>Training</span>
-                            <h4>Boxing</h4>
+                            <span>Entrenamiento</span>
+                            <h4>Boxeo</h4>
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -269,74 +265,97 @@
     <!-- Banner Section End -->
 
     <!-- Pricing Section Begin -->
-    <section class="pricing-section spad">
+    <section class="pricing-section service-pricing spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Plan</span>
-                        <h2>Choose your pricing plan</h2>
+                        <span>Nuestros Planes</span>
+                        <h2>ESCOGE TU PLAN DE PRECIOS</h2>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>Class drop-in</h3>
+                        <h3>Plan 3 Meses</h3>
                         <div class="pi-price">
-                            <h2>$ 39.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$100.000</h2>
+                            <span>Prepagado</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
+                            <li>Sauna</li>
+                            <li>Dieta</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Entrenamiento Personalizado</li>
+
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>12 Month unlimited</h3>
+                        <h3>Plan 6 Meses</h3>
                         <div class="pi-price">
-                            <h2>$ 99.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$190.000</h2>
+                            <span>+ 1 Mes Gratis</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
-                            <li>Month to mouth</li>
-                            <li>No time restriction</li>
+                            <li>Sauna</li>
+                            <li>Dieta</li>
+                            <li>Pilates</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Bebidas y Suplementos</li>
+                            <li>Entrenamiento Personalizado</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>6 Month unlimited</h3>
+                        <h3>Plan Anual</h3>
                         <div class="pi-price">
-                            <h2>$ 59.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>$400.000</h2>
+                            <span>1 Mes Gratis</span>
                         </div>
                         <ul>
-                            <li>Free riding</li>
-                            <li>Unlimited equipments</li>
-                            <li>Personal trainer</li>
-                            <li>Weight losing classes</li>
+                            <li>Sauna</li>
+                            <li>Spa</li>
+                            <li>Dieta</li>
+                            <li>Aerobicos</li>
+                            <li>Pilates</li>
+                            <li>Crossfit</li>
+                            <li>Nutrición</li>
+                            <li>Valoración Medica</li>
+                            <li>Bebidas y Suplementos</li>
+                            <li>Entrenamiento Personalizado</li>
                             <li>Month to mouth</li>
                             <li>No time restriction</li>
                         </ul>
-                        <a href="#" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-8">
+                    <div class="ps-item">
+                        <h3>Plan Visitante 1 Mes</h3>
+                        <div class="pi-price">
+                            <h2>$ 39.000</h2>
+                            <span>Libre de Tarjeta</span>
+                        </div>
+                        <ul>
+                            <li>Dieta</li>
+                            <li>Nutrición</li>
+                            <li>Entrenamiento Personalizado</li>
+                            <li>Limite tiempo 2 Hrs</li>
+                        </ul>
+                        <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
+                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
+                    </div>
             </div>
         </div>
     </section>
