--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Contactatenos</h2>
+                        <h2>Contactenos</h2>
                         <div class="bt-option">
                             <a href="./index.html">Inico</a>
                             <a href="#">Pagina</a>
@@ -150,8 +150,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-title contact-title">
-                        <span>Contact Us</span>
-                        <h2>GET IN TOUCH</h2>
+                        <span>Contactenos</span>
+                        <h2>PONGASE EN CONTACTO</h2>
                     </div>
                     <div class="contact-widget">
                         <div class="cw-text">
@@ -167,18 +167,18 @@
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>Support.gymcenter@gmail.com</p>
+                            <p>Support.wondergymcenter@gmail.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="leave-comment">
                         <form action="#">
-                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Nombre">
                             <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Comment"></textarea>
-                            <button type="submit">Submit</button>
+                            <input type="text" placeholder="Sitio Web">
+                            <textarea placeholder="Comentario"></textarea>
+                            <button type="submit">Enviar</button>
                         </form>
                     </div>
                 </div>
